--- a/about.html
+++ b/about.html
@@ -1,4 +1,8 @@
-<a href="index.html">About</a>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<a href="index.html">Home</a>
 <ul>
                  
         <strong> <p>Address:</strong>Brgy. Taminla Duenas, Iloilo</p> 
